@@ -1,3 +1,8 @@
+2003-05-26  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-DeskJet_450.xml: Updated text and added instructions
+	  for head alignment.
+
 2003-05-21  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-DeskJet_450.xml, printer/HP-Business_Inkjet_2200.xml,
